<resources>
    <string name="app_name">Fidelity NetBenefits</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_as_a_new_user">Register as a new user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="accessibility">Accessibility</string>
    <string name="terms_privacy">© 1998-2019 FMR LLC. All Rights Reserved. By using this website, you consent to the use
        of cookies as described here. Fidelity Brokerage Services LLC, Member NYSE, SIPC, 900 Salem Street, Smithfield,
        RI 02917
    </string>
    <string name="submit">Submit</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email_address">Enter your email adress</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_learn">Learn</string>
    <string name="title_planning">Planning</string>

    <string name="disclosures">Disclosures</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="title_market">Market</string>
    <string name="title_actions">Actions</string>
    <string name="go_to_home">Go to Home</string>
    <string name="update_profile">Update Profile</string>
    <string name="portfolio_total">Portfolio total</string>
    <string name="retirement_savings">Retirement Savings</string>
    <string name="future_roast_401_k">FUTURE ROAST 401(K)</string>
    <string name="article">Article</string>
    <string name="category_articles">Articles</string>
    <string name="category_videos">Videos</string>
    <string name="category_podcasts">Podcasts</string>
    <string name="library">Library</string>
    <string name="date">DATE</string>
    <string name="low_value">LOW VALUE</string>
    <string name="high_value">HIGH VALUE</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="title_activity_library_web_view">LibraryWebViewActivity</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="articles">Articles</string>
    <string name="home">Home</string>
    <string name="planning">Planning</string>
    <string name="learn">Learn</string>
    <string name="market">Market</string>
    <string name="actions">Actions</string>
    <string name="all_rights_reserved">© 1998-2019 FMR LLC. All Rights Reserved.</string>
    <string name="by_using_this_website">By using this website, you consent to the use of cookies as described here.
    </string>
    <string name="fidelity_brokerage_services">Fidelity Brokerage Services LLC, Member NYSE, SIPC, 900 Salem Street,
        Smithfield, RI 02917
    </string>
    <string name="you_ve_successfully_logged_out">You\'ve successfully logged out.</string>
    <string name="log_in_again">Log In Again</string>
    <string name="paperwork">PAPERWORK</string>
    <string name="send_a_document">Send a document</string>
    <string name="tax_information">Tax information</string>
    <string name="about_you">ABOUT YOU</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="change_password">Change password</string>
    <string name="company_headquarter">COMPANY HEADQUARTER</string>
    <string name="company_address_info">Company address info</string>
    <string name="show_google_maps">Show Google Maps</string>
    <string name="microsoft_401_k">MICROSOFT SAVINGS PLUS 401(K) PLAN</string>
    <string name="nike_401_k">NIKE EMPLOYEE BENEFIT: 401(K) PLAN</string>
    <string name="mac_401_k">MAC 401(K) PLAN</string>
    <string name="fidelity_mutual_fund_tax_information">Fidelity Mutual Fund tax information</string>
    <string name="enter_your_new_password">Enter your new password...</string>
    <string name="you_will_be_logged_out_after_changing_your_password">You will be logged out after changing your
        password!
    </string>
    <string name="update_now">Update Now</string>
    <string name="title_activity_company_maps">Company Map</string>

</resources>
