<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_planning"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_planning"/>

    <item
            android:id="@+id/navigation_learn"
            android:icon="@drawable/ic_learn_black_24dp"
            android:title="@string/title_learn"/>

    <item
            android:id="@+id/navigation_market"
            android:icon="@drawable/ic_market_black_24dp"
            android:title="@string/title_market"/>

    <item
            android:id="@+id/navigation_actions"
            android:icon="@drawable/ic_actions_black_24dp"
            android:title="@string/title_actions"/>



</menu>
