<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:background="@color/colorLightGreen"
             tools:context=".view.fragments.TermsPrivacyFragment">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvTermsOfUse"
                android:text="@string/terms_of_use"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvPrivacy"
                android:text="@string/privacy"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvSecurity"
                android:text="@string/security"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvAccessibility"
                android:text="@string/accessibility"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginStart="@dimen/margin_30_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
            android:text="@string/all_rights_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_40_dp"/>

    <TextView
            android:text="@string/by_using_this_website"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/fidelity_brokerage_services"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>