<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.changepassword.ChangePasswordActivity">

    <TextView
            android:id="@+id/tvChangePassword"
            android:text="@string/you_will_be_logged_out_after_changing_your_password"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            style="@style/StandardTitleStyle"
            android:layout_marginTop="@dimen/margin_50_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/etChangePassword"
            android:hint="@string/enter_your_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50_dp"
            android:layout_marginStart="@dimen/margin_50_dp"
            android:layout_marginEnd="@dimen/margin_50_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangePassword"/>

    <Button
            android:id="@+id/btnSubmitPassword"
            android:text="@string/submit"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/margin_20_dp"
            android:layout_marginStart="@dimen/margin_120_dp"
            android:layout_marginEnd="@dimen/margin_120_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etChangePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onClicks"/>

</androidx.constraintlayout.widget.ConstraintLayout>