<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/ivArticleIcon"
                android:layout_margin="@dimen/margin_10_dp"
                app:srcCompat="@drawable/ic_book_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tvArticle"
                android:text="@string/article"
                style="@style/StandardTextStyle"
                android:textColor="@color/color_green"
                android:layout_margin="@dimen/margin_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivArticleIcon"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tvTitle"
                android:text="@string/title"
                style="@style/StandardTextStyle"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_10_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivArticleIcon"/>

        <TextView
                android:id="@+id/tvDescription"
                android:text="@string/description"
                style="@style/StandardTextStyle"
                android:layout_margin="@dimen/margin_10_dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>