<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.LogoutFragment">

<data>
<variable
        name="viewModel"
        type="com.example.netbenefitsapp.viewmodel.logout.LogoutViewModel" />
</data>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLightGreen">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvDisclosures"
                android:text="@string/disclosures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_10_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvContactUs"/>

        <TextView
                android:id="@+id/tvContactUs"
                android:text="@string/contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_10_dp"
                app:layout_constraintStart_toEndOf="@id/tvDisclosures"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvLogout"/>

        <TextView
                android:id="@+id/tvLogout"
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_10_dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvContactUs"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{(view) -> viewModel.logout(view)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="View the full NetBenefits website."
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="NetBenefits is provided by Fidelity Investments."
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="© 2013 - 2019 FMR LLC. All rights reserved."
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
</layout>